@@ -12,6 +12,8 @@ west or source, i.e. negative
 - don't save geo accuracy of latitude and longitude are none
 - desensitize geoacc_entry if latitude or longitude are None
 - desensitize altacc_entry if alt_entry is None
+- accession editor gui tweaks for win32
+- add dms labels back to accession editor which i accidentaly deleted
 
 2006.05.23
 ----------
